--- a/src/App.css
+++ b/src/App.css
@@ -7,12 +7,14 @@ body {
 }
 
 center {
+  width: 80%;
   display: flex;
   justify-content: center;
+  flex-direction: column;
 }
 
 .App-header {
-  width: 80%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
