--- a/src/App.css
+++ b/src/App.css
@@ -56,10 +56,20 @@ center {
 
 iframe {
   position: absolute;
+  border: none;
+  z-index: 9999;
 }
 
 #containerIframe {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: center;  
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+}
+
+#container {
+
 }
