--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,8 @@
 }
 
 body {
-  background-color: rgb(172, 172, 248);
+  font-family: "roboto", sans-serif;
+  background-color: rgb(255, 255, 255);
 }
 
 center {
@@ -34,9 +35,15 @@ center {
   width: 30%;
 }
 
+h1 {
+  font-size: 48px;
+}
+
 
 @media only screen and (max-width: 1024px){
 	/*Big smartphones [426px -> 600px]*/
+
+
 }
 
 @media only screen and (max-width: 476px){
@@ -49,23 +56,26 @@ center {
 
 @media only screen and (max-width: 320px){
 	/*Small smartphones [325px -> 425px]*/
+
 }
 
+ul {
+  list-style: none;
+}
 
-
+/* Calendar fix center */
 
 iframe {
   position: absolute;
-  border: none;
-  z-index: 9999;
 }
 
 #containerIframe {
   display: flex;
   align-items: center;
-  justify-content: center;  
+  justify-content: center;
   position: relative;
   width: 100%;
   height: 100%;
   overflow-x: hidden;
+  overflow-y: hidden;
 }
