--- a/src/Styles/NavBar.css
+++ b/src/Styles/NavBar.css
@@ -1,13 +1,39 @@
 #navBar {
     display: flex;
     width: 100vw;
-    justify-content: flex-start;
-    border-bottom: 2px solid wheat;
-    background-color: rgb(163, 204, 241);
+    justify-content: space-between;
+    border-bottom: 2px solid rgb(58, 58, 58);
+    background-color: rgb(209, 209, 209);
 }
 
 #movEvita {
-    width: 20vh;
-    padding: 2vh;
-    margin-left: 10vw;
+    width: 10%;  
+    padding: 1%;  
+    margin-left: 10%;
+}
+
+
+@media only screen and (max-width: 1024px){
+	/*Big smartphones [426px -> 600px]*/
+    #movEvita {
+        width: 12%;
+    }
+}
+
+@media only screen and (max-width: 476px){
+	/*Small smartphones [325px -> 425px]*/
+    #movEvita {
+        width: 25%;
+        padding: 3%;
+        margin-left: 3%;
+    }
+}
+
+
+@media only screen and (max-width: 412px){  
+}
+
+@media only screen and (max-width: 320px){
+	/*Small smartphones [325px -> 425px]*/
+
 }
