--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 
 body {
   font-family: "roboto", sans-serif;
-  background-color: rgb(255, 255, 255);
+  background-color: #ececec;
 }
 
 center {
@@ -22,6 +22,8 @@ center {
   justify-content: center;
 }
 
+/* nuestros profes */
+
 .wtspImage {
   width: 90px;
   filter: drop-shadow(0px 21px 5px 0px rgba(0, 0, 0, 0.75));
@@ -35,12 +37,11 @@ center {
 .CardPeople {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   min-width: 238px;
   max-width: 100%;
   padding: 1% 2% 1% 2%;
   margin: 1%;
-
-  /* border: 1px solid rgb(48, 48, 48); */
   border-width: 0px 1px 1px 1px;
   border-radius: 22px;
   box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.75);
@@ -85,6 +86,7 @@ iframe {
   height: 100%;
   overflow-x: hidden;
   overflow-y: hidden;
+  z-index: 8;
 }
 
 
