--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@
   width: 100%;
 }
 
+/* limpiar tap celeste */
+* {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
 body {
   font-family: "roboto", sans-serif;
   background-color: #ececec;
